--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,12 @@ h1 {
     margin-top: 20px;
 }
 
+h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
 /* Reset default styles */
 * {
     margin: 0;
@@ -80,7 +86,7 @@ h1 {
 .nav-links a {
     text-decoration: none;
     color: white;
-    font-size: 28px;
+    font-size: 24px;
     transition: 0.3s;
     padding: 10px 15px; /* Adds spacing for better clicking */
 }
@@ -108,4 +114,26 @@ td {
     padding: 10px;
     border: 1px solid black;
     font-size: 16px;
+}
+
+.project {
+    width: 80%;
+    margin-bottom: 20px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.project:nth-child(odd) {
+    align-self: flex-start;
+    text-align: left;
+}
+.project:nth-child(even) {
+    margin-left: 5%;
+    align-self: flex-end;
+    text-align: right;
+}
+.project h2 {
+    margin-top: 0;
+    margin-bottom: 20px;
 }
